# automation

./: .env.example  .gitignore  =0.2.0  AGENT_SYSTEM_FIXED.md  API_REFERENCE.md  ARCHITECTURE.md  BUGFIX_SUMMARY.md  CODEBASEBUDDY_GUIDE.md  CODEBASEBUDDY_QUICKSTART.md  CODEBASEBUDDY_TEST_RESULTS.md  CODEBASEBUDDY_USAGE_GUIDE.md  CODEBASE_REORGANIZATION.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile  FIXES_APPLIED.md  FIXES_APPLIED_REALTIME.md  FIXES_APPLIED_REPORT.md  FUNCTION_CALLING_ISSUE.md  FUNCTION_CALLING_README.md  GROUPCHAT_COMPATIBILITY_FIX.md  INDUSTRIAL_AUDIT_REPORT.md  INDUSTRIAL_CODE_REVIEW.md  INDUSTRIAL_DEPLOYMENT_GUIDE.md  INDUSTRIAL_GRADE_FIXES.md  INDUSTRIAL_GRADE_REPORT.md  LAUNCH_WEB_APP.md  MANUAL_TESTING_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FIXES_APPLIED.md  PROJECT_EXPLANATION.md  QA_COMPREHENSIVE_TEST_REPORT.md  QA_TEST_REPORT.md  QUICKSTART_TESTING.md  QUICK_START.md  QUICK_START_OPTIMIZED.md  QUICK_START_SQLITE.md  README.md  SERVER_MANAGEMENT.md  SETUP_COMPLETE.md  (+40 more)
alembic/: env.py
backend/: main.py  requirements.txt
config/: autogen_agents.yaml  autogen_groupchats.yaml  autogen_workflows.yaml  config.production.yaml  config.yaml  function_schemas.yaml
daemon/: daemon_state.json
data/: memory_fallback.json
docker/: Dockerfile.api-gateway  Dockerfile.app  Dockerfile.mcp-codebasebuddy  Dockerfile.mcp-filesystem  Dockerfile.mcp-github  Dockerfile.mcp-memory  README.md
docs/: CODEBASEBUDDY_INTEGRATION.md  DYNAMIC_CONFIGURATION.md  OLD_README.md  SECURITY.md  openapi.yaml
examples/: mcp_integration_example.py
frontend/: index.html  package-lock.json  package.json
k8s/: README.md  namespace.yaml
mcp_servers/: codebasebuddy_server.py  filesystem_server.py  github_server.py  memory_server.py
monitoring/: prometheus.yml
old_tests/: test_agents.py  test_config.py  test_mcp_integration.py  test_mcp_servers.py
reports/: junit.xml  report.html  report.json
scripts/: automated_cleanup.py  check_codebase_health.py  cleanup_codebase.py  codebasebuddy_examples.py  codebasebuddy_interactive.py  debug_paths.py  fix_tests.py  generate_changelog.py  mcp_server_daemon.py  mcp_server_watchdog.py  pre_production_check.py  run_whitebox_tests.py  start_mcp_servers.py  test_codebasebuddy.py  test_fallback.py
src/: __init__.py  exceptions.py
(+319 files in other folders)
